--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "homepage": "https://github.com/yassinefikrat/reddit-reader#readme",
   "dependencies": {
-    "commander": "^2.17.1"
+    "chalk": "^2.4.1",
+    "commander": "^2.17.1",
+    "got": "^9.1.0",
+    "ora": "^3.0.0"
   }
 }
