--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   },
   "homepage": "https://github.com/yassinefikrat/reddit-reader#readme",
   "dependencies": {
+    "boxen": "^1.3.0",
     "chalk": "^2.4.1",
     "commander": "^2.17.1",
     "got": "^9.1.0",
+    "inquirer": "^6.2.0",
     "ora": "^3.0.0"
   }
 }
