--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
     "commander": "^2.17.1",
     "got": "^9.1.0",
     "inquirer": "^6.2.0",
-    "ora": "^3.0.0"
+    "inquirer-autosubmit-prompt": "^0.2.0",
   }
 }
