--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
   "homepage": "https://github.com/yassinefikrat/reddit-reader#readme",
   "dependencies": {
     "boxen": "^1.3.0",
-    "chalk": "^2.4.1",
-    "commander": "^2.17.1",
-    "got": "^9.1.0",
-    "inquirer": "^6.2.0",
+    "chalk": "^2.4.2",
+    "commander": "^2.20.0",
+    "got": "^9.6.0",
+    "inquirer": "^6.3.1",
     "inquirer-autosubmit-prompt": "^0.2.0",
+    "ora": "^3.4.0"
   }
 }
