--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "got": "^9.6.0",
     "inquirer": "^6.3.1",
     "inquirer-autosubmit-prompt": "^0.2.0",
-    "ora": "^3.4.0"
+    "ora": "^3.4.0",
+    "terminal-image": "^0.2.0"
   }
 }
